--- a/index.html
+++ b/index.html
@@ -1,44 +1,7 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site en maintenance</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-        }
-        .maintenance-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .maintenance-message {
-            text-align: center;
-        }
-        .maintenance-message h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
-        .maintenance-message p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-    </style>
-</head>
-<body>
-    <div class="maintenance-container">
-        <div class="maintenance-message">
-            <h1>Site en maintenance</h1>
-            <p>Nous sommes actuellement en train d'effectuer des mises à jour importantes sur notre site web.</p>
-            <p>Le site sera de retour très bientôt.</p>
-            <p>Nous vous remercions pour votre compréhension.</p>
-        </div>
-    </div>
-</body>
-</html>
+<pre style="font-family: monospace; color: #00ffcc;">
+╔════════════════════════════════════════════════════════════════════╗
+║   IA22_LOGIC — Gravé dans le terminal. Pensé pour durer.           ║
+║   Créé par : Zoubirou Mohammed Ilyes                               ║
+║   ORCID : 0009-0007-7571-3178                                      ║
+╚════════════════════════════════════════════════════════════════════╝
+</pre>
