--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>IA22_LOGIC — Souveraineté Numérique</title>
+  <title>IA22_LOGIC — Dossier de Stage</title>
   <style>
     body {
       background-color: #000;
@@ -15,26 +15,71 @@
     .container {
       max-width: 800px;
       margin: auto;
-      padding: 20px;
-      border: 2px solid #00ffcc;
-      border-radius: 10px;
       background-color: #111;
+      padding: 30px;
+      border-radius: 10px;
+      border: 2px solid #00ffcc;
     }
     h1, h2 {
       text-align: center;
       color: #00ffcc;
     }
-    .ascii {
-      white-space: pre;
-      font-size: 12px;
-      line-height: 1.2;
-      text-align: center;
-      margin-top: 20px;
-    }
-    p {
+    p, li {
       line-height: 1.6;
     }
-    .btn {
+    ul {
+      padding-left: 20px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 12px;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h1>IA22_LOGIC</h1>
+    <h2>Dossier de Stage</h2>
+
+    <h3>1. Introduction</h3>
+    <p>
+      Je suis <strong>Zoubirou Mohammed Ilyes</strong>, développeur indépendant et créatif passionné.  
+      Je vis avec la maladie de Parkinson, mais je continue à coder, à publier et à innover.  
+      Mon projet IA22_LOGIC est une œuvre engagée, une architecture libre et une voix numérique.
+    </p>
+
+    <h3>2. Projet IA22_LOGIC</h3>
+    <ul>
+      <li>Moteur IA local, modulaire et sécurisé</li>
+      <li>Basé sur FastAPI, JSON, shell Ubuntu</li>
+      <li>Modules : santé, ville, tunnel, environnement, cybersécurité</li>
+      <li>Interface terminale web stylisée, gravure ASCII, simulateur de commandes</li>
+    </ul>
+
+    <h3>3. Objectifs</h3>
+    <ul>
+      <li>Renforcer la souveraineté numérique</li>
+      <li>Créer une IA autonome, transparente et résistante</li>
+      <li>Offrir une alternative aux systèmes centralisés</li>
+    </ul>
+
+    <h3>4. Contributions</h3>
+    <ul>
+      <li>Site web : <a href="https://milyes.github.io" style="color:#00ffcc;">milyes.github.io</a></li>
+      <li>Code source : <a href="https://github.com/milyes/milyes.github.io" style="color:#00ffcc;">GitHub</a></li>
+      <li>ORCID : <a href="https://orcid.org/0009-0007-7571-3178" style="color:#00ffcc;">0009-0007-7571-3178</a></li>
+    </ul>
+  </div>
+
+  <footer>
+    © 2025 — IA22_LOGIC par Zoubirou Mohammed Ilyes
+  </footer>
+
+</body>
+</html>    .btn {
       display: inline-block;
       margin: 20px 10px;
       padding: 10px 20px;
